src/objects/Relacion_Campos__mdt.object
<CustomObject>
    <description>PRUEBA DE CONCEPTO. Contiene una lista de nombres API para la asignación masiva en la recepción de ficheros y la generación de movimientos</description>
    <fields>
        <fullName>Campos__c</fullName>
        <description>Lista de nombres API de campos separados por punto y coma</description>
        <label>Campos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Identificador_CIA__c</fullName>
        <label>Identificador CIA</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identificador__c</fullName>
        <description>Identificador de la relación de campos</description>
        <label>Identificador</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Longitudes__c</fullName>
        <description>Puntos iniciales/Finales para el troceado en campos de los registros de ficheros</description>
        <label>Longitudes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Posiciones__c</fullName>
        <label>Posiciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Relacion_Campos</label>
    <pluralLabel>Relaciones_Campos</pluralLabel>
</CustomObject>